--- a/client_code/form/widgets/date/form_template.yaml
+++ b/client_code/form/widgets/date/form_template.yaml
@@ -24,4 +24,8 @@ components:
   name: label_mandatory
   layout_properties: {grid_position: 'ROGUOR,RBIPJJ'}
   event_bindings: {}
+- type: form:form.widgets.widget_utilities.hr
+  properties: {}
+  name: hr
+  layout_properties: {grid_position: 'QBWAVD,XYIYDG'}
 is_package: true
