--- a/client_code/form/widgets/drop_down/form_template.yaml
+++ b/client_code/form/widgets/drop_down/form_template.yaml
@@ -43,8 +43,8 @@ components:
   layout_properties:
     col_widths: {}
     grid_position: CYWPMC,JJEVPL
-- type: form:form.widgets.widget_utilities.hr
-  properties: {}
-  name: hr
-  layout_properties: {grid_position: 'KJENEA,TDBBVB'}
+- type: Spacer
+  properties: {height: 32}
+  name: spacer_1
+  layout_properties: {grid_position: 'UKNNKK,GNIFFT'}
 is_package: true
