--- a/client_code/landing/select_action/survey_row/form_template.yaml
+++ b/client_code/landing/select_action/survey_row/form_template.yaml
@@ -2,33 +2,33 @@ container:
   type: DataRowPanel
   event_bindings: {}
 components:
-- type: Link
-  properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
-    visible: true, text: build, font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
-    spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
-    italic: false, background: '', bold: false, underline: false, icon: ''}
-  name: link_build
-  layout_properties: {column: HMTFLI}
-  event_bindings: {click: link_build_form_click}
-- type: Link
-  properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
-    visible: true, text: data, font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
-    spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
-    italic: false, background: '', bold: false, underline: false, icon: ''}
-  name: link_data
-  layout_properties: {column: OJKXDS}
-  event_bindings: {click: data_click}
-- type: Link
-  properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
-    visible: true, text: share, font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
-    spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
-    italic: false, background: '', bold: false, underline: false, icon: ''}
-  name: link_share
-  layout_properties: {column: TQNHSB}
-  event_bindings: {}
 - type: Label
   properties: {}
   name: label_title
   layout_properties: {column: EVCOPM}
+  event_bindings: {}
+- type: Button
+  properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
+    foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
+    icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+    underline: false, icon: 'fa:pencil'}
+  name: button_build
+  layout_properties: {column: HMTFLI}
+  event_bindings: {click: button_build_form_click}
+- type: Button
+  properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
+    foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
+    icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+    underline: false, icon: 'fa:database'}
+  name: button_data
+  layout_properties: {column: OJKXDS}
+  event_bindings: {click: data_click}
+- type: Button
+  properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
+    foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
+    icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+    underline: false, icon: 'fa:share'}
+  name: button_share
+  layout_properties: {column: TQNHSB}
   event_bindings: {}
 is_package: true
