--- a/client_code/landing/select_action/survey_row/form_template.yaml
+++ b/client_code/landing/select_action/survey_row/form_template.yaml
@@ -31,4 +31,12 @@ components:
   name: button_share
   layout_properties: {column: TQNHSB}
   event_bindings: {click: share_click}
+- type: Button
+  properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
+    foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
+    icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+    underline: false, icon: 'fa:cog'}
+  name: button_1
+  layout_properties: {column: PLVZBJ}
+  event_bindings: {click: settings_click}
 is_package: true
