--- a/client_code/landing/select_action/form_template.yaml
+++ b/client_code/landing/select_action/form_template.yaml
@@ -1,7 +1,8 @@
 is_package: true
 container:
   type: HtmlTemplate
-  properties: {html: '@theme:standard-page.html'}
+  properties: {tooltip: '', background: '', foreground: '', border: '', visible: true,
+    role: null, html: '@theme:standard-page.html'}
   event_bindings: {show: form_show}
 components:
 - type: ColumnPanel
