--- a/anvil.yaml
+++ b/anvil.yaml
@@ -75,6 +75,10 @@ db_schema:
       name: enabled
       type: bool
       admin_ui: {order: 1, width: 100}
+    ZVyDTp+skK4=:
+      name: password_hash
+      type: string
+      admin_ui: {order: 4, width: 200}
     ouhpmzg29iw=:
       name: admin
       type: bool
