--- a/client_code/landing/select_action_survey/form_template.yaml
+++ b/client_code/landing/select_action_survey/form_template.yaml
@@ -6,7 +6,7 @@ container:
   event_bindings: {show: form_show}
 components:
 - type: ColumnPanel
-  properties: {col_widths: '{"TVNDOS":40,"VJQZBP":40}'}
+  properties: {col_widths: '{"TVNDOS":40}'}
   name: content_panel
   layout_properties: {slot: default}
   components:
@@ -41,8 +41,8 @@ components:
     layout_properties: {grid_position: 'ARPAAL,GZUYLC'}
     components:
     - type: RepeatingPanel
-      properties: {spacing_above: none, spacing_below: none, item_template: landing.select_action.survey_row}
-      name: repeating_panel_1
+      properties: {spacing_above: none, spacing_below: none, item_template: landing.select_action_survey.survey_row}
+      name: repeating_panel_surveys
       layout_properties: {}
       event_bindings: {hide: repeating_panel_1_hide}
     event_bindings: {}
@@ -54,56 +54,21 @@ components:
     name: primary_color_1
     layout_properties: {grid_position: 'QEKFNW,TVNDOS'}
     event_bindings: {click: new_survey_click}
-  - type: form:utilities.hr
-    properties: {}
-    name: custom_1
-    layout_properties: {grid_position: 'FGLTJQ,USTGEK'}
-  - type: Label
-    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: Reports, font_size: 20, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
-      underline: false, icon: ''}
-    name: label_4
-    layout_properties: {grid_position: 'ESCNAG,GNOJTB'}
-    event_bindings: {}
-  - type: DataGrid
-    properties:
-      role: null
-      columns:
-      - {title: Column 1, id: HERZHP, data_key: column_1}
-      - {title: Column 2, id: WNVKNI, data_key: column_2}
-      - {title: Column 3, id: SSDLKJ, data_key: column_3}
-      auto_header: false
-      tooltip: ''
-      border: ''
-      foreground: ''
-      rows_per_page: 20
-      visible: true
-      show_page_controls: true
-      spacing_above: small
-      spacing_below: small
-      background: ''
-    name: data_grid_2
-    layout_properties: {grid_position: 'TARDIO,AYBQHC'}
-    components:
-    - type: RepeatingPanel
-      properties: {spacing_above: none, spacing_below: none, item_template: landing.select_action.report_row}
-      name: repeating_panel_2
-      layout_properties: {}
-      event_bindings: {}
-  - type: Button
-    properties: {role: primary-color, align: left, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: true, text: new report, font_size: null, font: '',
-      spacing_above: small, icon_align: left, spacing_below: small, italic: false,
-      background: '', bold: false, underline: false, icon: 'fa:plus'}
-    name: primary_color_2
-    layout_properties: {grid_position: 'VOYDUB,VJQZBP'}
-    event_bindings: {click: new_report_click}
   event_bindings: {}
 - type: FlowPanel
   properties: {}
   name: navbar_links
   layout_properties: {slot: nav-right}
+  event_bindings: {}
+  components:
+  - type: Link
+    properties: {role: null, url: '', align: center, tooltip: '', border: '', foreground: '',
+      visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
+      spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
+      italic: false, background: '', bold: false, underline: false, icon: 'fa:home'}
+    name: link_1
+    layout_properties: {}
+    event_bindings: {click: link_home_click}
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
     text: OpenQuestion, font_size: null, font: '', spacing_above: small, icon_align: left,
