--- a/client_code/reports/main/form_template.yaml
+++ b/client_code/reports/main/form_template.yaml
@@ -30,11 +30,19 @@ components:
   - type: Link
     properties: {role: null, url: '', align: center, tooltip: '', border: '', foreground: '',
       visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
+      spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
+      italic: false, background: '', bold: false, underline: false, icon: 'fa:arrow-left'}
+    name: link_landing_report
+    layout_properties: {}
+    event_bindings: {click: link_landing_report_click}
+  - type: Link
+    properties: {role: null, url: '', align: center, tooltip: '', border: '', foreground: '',
+      visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
       spacing_above: small, icon_align: left, col_widths: '{}', spacing_below: small,
       italic: false, background: '', bold: false, underline: false, icon: 'fa:home'}
-    name: link_landing
+    name: link_home
     layout_properties: {grid_position: 'WASXLK,ROOGGG'}
-    event_bindings: {click: link_landing_click}
+    event_bindings: {click: link_home_click}
     components: []
   event_bindings: {}
 - type: ColumnPanel
