Edited start_up, landing.settings.ColorChanger and landing.settings.survey_settings

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -28,8 +28,8 @@ unique_ids:
     start_up: RYAY3JNUNNKIQ5T5SIUHLNCOAQSLILGX, utilities: EL7DBISDGVGMEN6PDA33EC7WJD66GCR3,
     form.widgets.widget_utilities: RMPSCITOJTECVYHYCNMUMM5WJ3LNYPBV, reports: JAELIS3GTLWNTY4IUEXDXGCU56UIYSM6,
     form: XWU6Z4HAX5MJLQUVHJPYRPWDLOUOR6JP, reports.widgets.widget_utilities: WWPS4F6DAIKMRWDFEMSZNJHO45W6D65N,
-    build.widgets: A4E6YA4R7VMAPLVHGJ6BCFJVJEQRJ3J7, build: 2AL7MAP4R4S2XKCPDN6AWSF3YGM3HAJE,
-    form.widgets: WOD7TQ7GVVUXUVFR6CFLTS6QTC6VRD7X, build.branch: 2HW6FLH7OQ4TO3RSKQSAE5GCPLAQOTO6,
-    landing: 6SOSO3VGIZXWMZ2SQTKKB7YMNH7LY4QQ}
+    build.widgets: A4E6YA4R7VMAPLVHGJ6BCFJVJEQRJ3J7, landing.settings.ColorChanger: X3ZMQR7LEUEKF6C24V3QJKJJ4B7ICBVP,
+    build: 2AL7MAP4R4S2XKCPDN6AWSF3YGM3HAJE, form.widgets: WOD7TQ7GVVUXUVFR6CFLTS6QTC6VRD7X,
+    build.branch: 2HW6FLH7OQ4TO3RSKQSAE5GCPLAQOTO6, landing: 6SOSO3VGIZXWMZ2SQTKKB7YMNH7LY4QQ}
   server_modules: {server_reports: EAKKZZNXW7JGRHGQIGAOS6MP46NHDRNF, server_surveys: E7ED5V3AIMOKY47XR6PDKDEMJLCLOABX}
   assets: {standard-page.html: YQT44RRI6GRDFH3NFFTKWKBQK2IGR57N, theme.css: HDDQUOZEJYERG4KEW32X34Q4II647WY7}
