--- a/anvil.yaml
+++ b/anvil.yaml
@@ -57,9 +57,10 @@ native_deps: {head_html: "<script>\n/*\nfunction get_jQuery_obj(component) {\n  
     \ = self\n      \tconst element = get_jQuery_obj(component);\n        element.trigger(event);\n\
     \    });\n}\n</script>\n\n<script src=\"https://cdn.jsdelivr.net/npm/vega@5.10.0\"\
     ></script>\n<script src=\"https://cdn.jsdelivr.net/npm/vega-lite@4.7.0\"></script>\n\
-    <script src=\"https://cdn.jsdelivr.net/npm/vega-embed@6.5.1\"></script>\n\n<link\
-    \ href=\"https://cdnjs.cloudflare.com/ajax/libs/jsoneditor/9.0.3/jsoneditor.css\"\
-    \ rel=\"stylesheet\" type=\"text/css\">\n<script src=\"https://cdnjs.cloudflare.com/ajax/libs/jsoneditor/9.0.3/jsoneditor.min.js\"\
+    <script src=\"https://cdn.jsdelivr.net/npm/vega-embed@6.5.1\"></script>\n<script\
+    \ src=\"https://cdn.jsdelivr.net/npm/tinycolor@1.4.2\"></script>\n\n\n<link href=\"\
+    https://cdnjs.cloudflare.com/ajax/libs/jsoneditor/9.0.3/jsoneditor.css\" rel=\"\
+    stylesheet\" type=\"text/css\">\n<script src=\"https://cdnjs.cloudflare.com/ajax/libs/jsoneditor/9.0.3/jsoneditor.min.js\"\
     ></script>\n\n<script>\nvar opts={\"renderer\": \"svg\", \"mode\": \"vega-lite\"\
     , \"actions\": {\"export\": true, \"source\": false, \"editor\": false, \"compiled\"\
     : false}}  \n  \nfetch('https://vega.github.io/schema/vega-lite/v4.json')\n  \t\
